# pna_loup_suivi

./: .cookiecutter.json  .gitignore  .safety-policy.yml  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
data/: 240122_donnees_geropred_canton_2010-2022.ods  SAA_2010-2024_definitives_donnees_departementales_ovins_caprins.ods  bilan_constat_loup_38.csv  bilan_tir_loups_38.csv  departements-region.csv  depts2016.tab  dommages.csv  nbloupsestime.csv  protocole_intervention.csv  reg2016.tab
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
notebook/: Analyse-38.ipynb  Analyse_cheptel.ipynb  Analyse_dommages.ipynb  Analyse_mortalité_loup.ipynb  Analyse_population_loups.ipynb  Suivi_population_loups.ipynb
notebook/.ipynb_checkpoints/: Analyse-38-checkpoint.ipynb
results/: Analyse_cheptels.xlsx
src/pna_loup_suivi/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
workflow/: Visualisation_loups_tués.ows
