[project]
name = "pna_loup_suivi"
version = "0.0.1"
description = "Pna_Loup_Suivi"
authors = [{ name = "Daniel Thonon", email = "d.thonon9@outlook.com" }]
license = "GPL-3.0"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11, <4.0"
dependencies = [
    "click>=8.0",
    "geopandas>=0.12",
    "ipykernel>=6.29",
    "jupyterlab>=3.5",
    "numpy>=1.21",
    "pandas>=1.5",
    "seaborn>=0.12",
]
dynamic = ["urls"]

[project.scripts]
pna_loup_suivi = "pna_loup_suivi.__main__:main"

[tool.poetry.urls]
Changelog = "https://github.com/dthonon/pna_loup_suivi/releases"
homepage = "https://github.com/dthonon/pna_loup_suivi"
repository = "https://github.com/dthonon/pna_loup_suivi"

[tool.poetry]
requires-poetry = '>=2.0'

[tool.poetry.group.dev.dependencies]
black = ">=21.10b0"
darglint = ">=1.8"
flake8 = ">=4.0"
flake8-bandit = ">=2.1"
flake8-bugbear = ">=21.9"
flake8-docstrings = ">=1.6"
flake8-rst-docstrings = ">=0.2"
furo = ">=2021.11"
isort = ">=5.10"
jupyter = ">=1.0"
mypy = ">=0.930"
myst-parser = { version = ">=0.16" }
pep8-naming = ">=0.12"
pre-commit = ">=2.16"
pre-commit-hooks = ">=4.1"
Pygments = ">=2.10"
pytest = ">=6.2"
pyupgrade = ">=2.29"
safety = ">=1.10"
typeguard = ">=2.13"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
